--- a/Possible Portfolio Project/HTML PAGES/OrderForm.html
+++ b/Possible Portfolio Project/HTML PAGES/OrderForm.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="../CSS/Index/navigationmenue.css">
         <link rel="stylesheet" href="../CSS/Index/shared.css">
-        <link rel="stylesheet" href="../CSS/About Us/aboutus.css">
+        <link rel="stylesheet" href="../CSS/OrderForm/orderform.css">
          <title>Stewart Farm and Ranch</title>
     </head>
 <body>
@@ -30,7 +30,7 @@
         
                 
 
-            <div id="aboutus">
+            <div id="order">
                 <div class="container">
                     <div class="text-center">
                         <span class="head-main">About Us </span>
