--- a/Index.html
+++ b/Index.html
@@ -59,6 +59,14 @@
 
 
 
+<!--Footer-->
+<div class="footer">
+    <p>This should be the end the end of the page</p>
+</div>
+<!--End Footer-->
+
+
+
 
                 
 
