--- a/HTML PAGES/About Us.html
+++ b/HTML PAGES/About Us.html
@@ -38,8 +38,35 @@
                     </div>
                 </div>
             </div>
-        <h2> This is a test text. Hopefully this will help me figure studff out</output></h2>
+        <h1>Stewart Farm and Ranch</output></h1>
+
+        <p>Stewart Farm and Ranch started as a small family farm in rural Utah. We got our start in Hay, Grain, and Corn crops. Soon we made
+            the choice to branch out into raising chickents for eggs.
+        </p>
+        <p>After a few months of research we settled on Rhode Island Reds for our farm. We chose them for their versitility, in particular their
+            egg laying abilities. In the beginning we raised our chickens for eggs only. After about 2 years of keeping our chickens for eggs only we 
+        decided to breed, and butcher our chickens. The decision was based on a few things.</p>
+        <h4>1. A hens optimal egg laying is within the first couple of years.</h4>
+        <h4>2. MeLyssa did not come from a farming background. The idea of butvhering their own animals was a hard idea
+            to wrap her head around. However, she realized one day that if she was going to eat meat anyway, knowing where the meat came from 
+            and how the animal was treated was absolutley critical for her. 
+        </h4>
+        <h4> 3. From a cost to outcome standpoint, breeding your own chickens for eggs and butchers enables you to see the entire 
+            process and get more for your money per bird. 
+        </h4>
+
+        <p>Despite the research their is a big difference between what you read in the books and what happens in real life. It took the first 
+            3 years of the opperation before we were able to find a system that worked well both for us as well as our animals. Now we are able 
+            to breed, and raise out birds successfully.
+        </p>
+        <p> The Next animal that we set our eyes on were the pigs. We did about a years worth of research before we got our first 2 pigs. </p>
         
+
+        <!--Footer-->
+<footer>
+    <p class="center">&copy Stewart Farm and Ranch</p>
+</div>
+<!--End Footer-->
         </div>
     </section>
 </body>
