--- a/Index.html
+++ b/Index.html
@@ -82,16 +82,15 @@
         <div class="Row" id="GitHub">
             <!--Left column-->
             <div class="Column_1">
-                <h1>GitHub</h1>
+                <h1>Our Promise to You</h1>
                 <p>
-                    You can view my coding projects on my GitHub profile here:
+                    We promise.
                     <br>
-                    <p class="center"><a href="https://github.com/Mstewart93" target="_blank">MeLyssa Stewart's Github</a></p>
                 </p>
             </div>
             <!--Right column-->
             <div class="Column_2">
-                <a href="https://github.com/the-tech-academy" target="_blank"><img src="./Images/GitHub-logo.png" alt="GitHub Logo"></a>
+                <img src="./CSS/Images/promise.jpeg" alt="Promise">
             </div>
         </div>
 
@@ -102,7 +101,7 @@
 
 <!--Footer-->
 <footer>
-    <p class="center">&copy MeLyssa and Jason Stewart</p>
+    <p class="center">&copy Stewart Farm and Ranch</p>
 </div>
 <!--End Footer-->
 
