--- a/HTML PAGES/Chickens.html
+++ b/HTML PAGES/Chickens.html
@@ -14,7 +14,7 @@
             <div class="navbar">
                 <a class="navbar-brand" href="../Index.html">The Stewart's Farm and Ranch</a>
                 <a href="./About Us.html">About Us</a>
-                <a href="./servicesandpricing.html">Services and Pricing</a>
+             
                 <a href="./OrderForm.html">Order Form </Form></a>
                 <div class="dropdown">
                     <button class="dropbtn">Products</button>
@@ -23,6 +23,16 @@
                         <a href="./pigs.html">Pigs</a>
                         <a href="./cows.html">Cows</a>
                         <a href="./Feed.html">Feed</a>
+
+                    </div>
+                </div>
+                <div class="dropdown">
+                <button class="dropbtn">Blog</button>
+                <div class="dropdown-content">
+                        <a href="">Chickens</a>
+                        <a href="">Pigs</a>
+                        <a href="">Cows</a>
+                        <a href="">Feed</a>
                     </div>
                 </div>
             </div>
@@ -38,7 +48,9 @@
                     </div>
                 </div>
             </div>
-        <h2> This is a test text. Hopefully this will help me figure studff out chickens</output></h2>
+        <h2> We have been raising Rhode Island Red Chickens for the last 4 years, and breeding them for 3. For our dual purposes.
+            we have found them to be the ideal bird! 
+        </output></h2>
         
         </div>
     </section>
