--- a/HTML PAGES/blog.html
+++ b/HTML PAGES/blog.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="../CSS/Index/navigationmenue.css">
         <link rel="stylesheet" href="../CSS/Index/shared.css">
         <link rel="stylesheet" href="../CSS/CSS/servicesandpricing.css">
+        <link rel="stylesheet" href="./CSS/blog/blog.css">
          <title>Stewart Farm and Ranch</title>
     </head>
 <body>
@@ -14,7 +15,7 @@
             <div class="navbar">
                 <a class="navbar-brand" href="../Index.html">The Stewart's Farm and Ranch</a>
                 <a href="./About Us.html">About Us</a>
-                <a href="./servicesandpricing.html">Services and Pricing</a>
+                <a href="./blog.html">Blog</a>
                 <a href="./OrderForm.html">Order Form </Form></a>
                 <div class="dropdown">
                     <button class="dropbtn">Products</button>
